fix body overflow-y

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-body{margin: 0;padding: 0;background-color: #f4f7fa;overflow: hidden;}
+body{margin: 0;padding: 0;background-color: #f4f7fa;overflow-x: hidden;}
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
